--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*////////////// Fonts //////////////*/
 
-/* link the web font used for the level 1 heading here */
+@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');
 
 /*////////// Global Styles //////////*/
 
@@ -12,9 +12,51 @@ body {
 
 .wrapper {
 	width: 960px;
-	margin: 0 auto;
+	height: 1060px;
+	margin: 0 auto ;
 	background: #fff;
 	padding: 0 45px 20px;
 }
+
+h1 {
+	padding-bottom: 10px;
+	margin: 0 0 5px;
+	font-size: 5em;		
+	font-weight: normal;	
+	font-family: 'Baskerville', serif;	
+	border-bottom: 1px solid #ccc;
+  color:rgb(156,172,166);
+}
+	
+	h2 {
+	  font-family:'baskerville', serif;
+	  color: rgb(156,172,166);
+	}
+
+
+
+img { 
+   border:5px solid #021a40;
+   border-color: rgb(156,172,166);
+}
+
+.small{
+  font-size: 0.8em;
+}
+
+footer{
+  text-align: right;
+  background: #fff;
+}
+
+#press img {
+	border: 5px #CCC solid;	
+	padding: 1px;		
+}	
+
+#nytimes.hover {
+    opacity: 1.0;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+
 
 /* Write all remaining styles here */
