--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,17 @@
 
 /* link the web font used for the level 1 heading here */
 
+@font-face {
+	font-family: Baskerville;
+	src:url(fonts/Baskerville.ttc);
+}
+
 /*////////// Global Styles //////////*/
 
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -18,3 +23,70 @@ body {
 }
 
 /* Write all remaining styles here */
+
+header {
+	color: rgba(160,172,168,1);
+	border-color: rgba(160,172,168,1);
+}
+
+header h1 {
+	font-weight: normal;
+	font-family: Baskerville;
+	font-size: 5em;
+	margin: 0 0 10px 0;
+}
+
+header hr {
+	border-style: solid;
+	margin: 5px auto;
+	border-bottom: 0px;
+	color: rgba(200,200,200,1);
+}
+
+img.featured {
+	border: 5px solid rgba(158,170,166,1);
+	box-sizing: border-box;
+	width: 100%;
+}
+
+h2 {
+	font-size: 2em;
+	color: rgba(114,126,124,1);
+}
+
+p {
+	color: rgba(103,104,100,1);
+}
+
+p a {
+	color: rgba(94,136,194,1);
+	text-decoration: none;
+}
+
+p a:hover {
+	color: rgba(200,166,134,1);
+	text-decoration: underline;
+}
+
+.card {
+
+}
+
+.card img {
+	display: inline-block;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	border: .25em solid rgba(203,205,204,1);
+	transition: border 0.3s ease-out;
+}
+
+.card:hover img {
+	border: .25em solid rgba(117,128,123,1);
+	transition: border 0.3s ease-out;
+}
+
+footer {
+	margin: 1.2em;
+	text-align: right;
+	font-size: 10pt;
+}
