--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,24 @@ body {
 }
 
 /* Write all remaining styles here */
+header a {
+  color: rgb(152, 173, 166);
+  font-size: 2.5em;
+  text-decoration: none;
+}
+
+a {
+  background: transparent;
+}
+
+h2 {
+  color: rgb(111, 127, 122);
+  font-size: 2em;
+}
+
+footer {
+  text-align: right;
+}
+.small {
+  font-size: 0.8em;
+}
