--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 /*////////////// Fonts //////////////*/
 
-/* link the web font used for the level 1 heading here */
-
+@font-face {
+	font-family: 'Baskerville';
+	src: url(../fonts/Baskerville.ttc);
+}
 /*////////// Global Styles //////////*/
 
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -17,4 +19,20 @@ body {
 	padding: 0 45px 20px;
 }
 
+h1 {
+	padding-bottom: 10px;
+	margin-bottom: 5px;
+	border-bottom: 1px solid #ccc;
+	font-family: 'Baskerville', serif;
+}
+
 /* Write all remaining styles here */
+
+/*////////// Layout //////////*/
+
+
+#featured {
+	margin: 10px 0;
+}
+
+/*////////// Sections //////////*/
