--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 /*////////////// Fonts //////////////*/
 
 /* link the web font used for the level 1 heading here */
+@font-face {
+  font-family: 'Baskerville';
+  src: url(../fonts/Baskerville.ttc);
+}
 
 /*////////// Global Styles //////////*/
 
@@ -8,6 +12,23 @@ body {
 	background: #F3EBE9;
 	font-size: 100%;
 	font-family: 'Times New Roman', serif; 
+	color: #6e7e79;
+}
+ a:link {
+  color: #1983ba;
+  text-decoration: none;
+}
+ a:visited {
+  color: #1983ba;
+  text-decoration: none;
+}
+ a:hover {
+  color: #1983ba;
+  text-decoration: underline;
+}
+ a:active {
+  color: #1983ba;
+  text-decoration: underline;
 }
 
 .wrapper {
@@ -18,3 +39,54 @@ body {
 }
 
 /* Write all remaining styles here */
+
+h1 {
+  font-size: 5em;
+  font-weight: normal;
+  font-family: 'Baskerville', serif;
+  color: #9ba9a4;
+  margin: 0;
+}
+ h1 a:link {
+  color: #9ba9a4;
+  text-decoration: none;
+}
+ h1 a:visited {
+  color: #9ba9a4;
+  text-decoration: none;
+}
+ h1 a:hover {
+  color: #6e7e79;
+  text-decoration: none;
+}
+ h1 a:active {
+  color: #6e7e79;
+  text-decoration: none;
+}
+ hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 0.3em 0;
+  padding: 0;
+}
+ /*////////// IMAGES //////////*/
+ .feature img{
+  padding: 5px;
+  background: #9aaaa5;
+}
+ .press img{
+  border: 5px solid #c8cccb;
+  padding: 1px;
+  transition: border;
+}
+ .press img:hover{
+  border: 5px solid #9aaaa5;
+}
+ .press a{
+  text-decoration: none;
+} 
+
+
+
