--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -18,3 +18,51 @@ body {
 }
 
 /* Write all remaining styles here */
+@font-face {
+	font-family: 'Baskerville';
+	src: url(../fonts/Baskerville.ttc);
+}
+
+header a{
+	color: rgb(152,173,166);
+		text-decoration: none;
+}
+
+h1{
+	font-size: 5em;
+	font-family: 'Baskerville', serif;
+	margin: 0 0 5px;
+	border-bottom: 1px solid #ccc;
+}
+
+h2{
+	color: rgb(111,127,122);
+	font-size: 2em;
+}
+
+p{
+	font-size: 1em;
+	color: #555;
+}
+
+.small {
+	font-size: 0.8em;
+	text-align: right;
+	background: #fff
+}
+
+p a{
+	text-decoration: none;
+	color: #1783bb;
+}
+
+img{
+	border: 5px solid #ccc
+}
+
+#press img:hover{
+	border: 5px rgb(111,127,122) solid
+}
+header a:hover {
+	color: rgb(111,127,122);
+}
