--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 /*////////////// Fonts //////////////*/
+@font-face {
+	font-family: 'Baskerville';
+	src: url(../fonts/Baskerville.ttc);
+}
 
-/* link the web font used for the level 1 heading here */
 
 /*////////// Global Styles //////////*/
 
@@ -12,9 +15,82 @@ body {
 
 .wrapper {
 	width: 960px;
+	height:100%;
 	margin: 0 auto;
 	background: #fff;
 	padding: 0 45px 20px;
 }
 
+header {
+  color: rgb(153,173,166);
+  font-size: 2em;
+	margin: 0;
+	font-weight: normal;
+	font-family: 'Baskerville', serif;
+	border-bottom: 1px solid #ccc;
+	
+}
+
+h2 {
+	color: rgb(111,127,122);
+	font-size: 2em;
+}
+
+p  {
+	color: #555;
+	font-size: 1em;
+	margin: 0 0 20px 0;
+}
+
+.small {
+	font-size: 0.8em;
+}
+
 /* Write all remaining styles here */
+
+/*/////// TOP  /////////*/
+
+
+#featured_image {
+  width: 100%;
+  margin-top:5px;
+  border: 5px solid rgb(153,173,166);
+}
+
+
+/*/////// MAIN /////////////*/
+
+header a {
+	color: rgb(152,173,166);
+	text-decoration: none;
+}
+
+header a:hover {
+	color: rgb(111,127,122);
+}
+
+
+/*/////// ADS /////////////*/
+#press {
+	margin-bottom: 20px;
+	text-decoration:none;
+}
+
+#press img {
+	border: 5px #ccc solid;
+	padding: 1px;
+}
+
+.wrapper:after {
+  content:".";
+  display:block;
+  clear:both;
+  height:0;
+  line-height:0;
+  visibility:hidden;
+}
+
+footer p {
+	text-align: right;
+	background: #fff;
+}
