--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -18,3 +18,62 @@ body {
 }
 
 /* Write all remaining styles here */
+
+h1 {
+	font-size: 80px;
+	color: rgb(152, 173, 166);
+	margin: 0 0 5px;
+	font-weight: normal;
+	font-family: 'Baskerville', serif;
+	border-bottom: 1px solid #ccc;
+	padding-bottom: 10px;
+}
+
+h1:hover {
+	color: rgb(111,127,122);
+}
+
+#necklace {
+	border-style: solid;
+	border-width: 5px;
+	border-color: rgb(152, 173, 166);
+}
+
+h2 {
+	font-size: 30px;
+	color: rgb(111, 127, 122);
+}
+
+#feature a {
+  color: #1783bb;
+  text-decoration: none;
+}
+
+#feature a:hover {
+  text-decoration: underline;
+}
+
+
+p {
+	color: rgb(90, 90, 90);
+}
+
+#press {
+	margin-bottom: 20px;
+}
+
+#press img {
+	border: 5px #ccc solid;
+	padding: 1px;
+}
+
+#press img:hover {
+	border: 5px rgb(111,127,122) solid;
+}
+
+footer {
+	font-size: 12px;
+	text-align: right;
+	color: rgb(100, 100, 100);
+	padding-top: 20px;
+}
