--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 /*////////////// Fonts //////////////*/
 
+@font-face {
+	font-family: 'Baskerville';
+	src: url(../fonts/Baskerville.ttc);}
 /* link the web font used for the level 1 heading here */
 
 /*////////// Global Styles //////////*/
@@ -16,5 +19,53 @@ body {
 	background: #fff;
 	padding: 0 45px 20px;
 }
+h1{font-size: 5em;
+font-family: 'baskerville', serif;
+font-weight: normal;
+padding-bottom: 10 px; 
+margin: 0 0 10px; }
+
+.small {
+	font-size: 0.8em;}
 
 /* Write all remaining styles here */
+/*////////// Section Styles //////////*/
+
+header a{
+	color: rgb(152,173,166);
+	text-decoration: none;
+}
+
+header a:hover {
+	color: rgb(111,127,122);
+}
+
+#featured img {
+	border: 5px rgb(152,173,166) solid;
+}
+
+#featured a {
+	color: #1783bb;
+	text-decoration: none;
+}
+
+#featured a:hover {
+	text-decoration: underline;
+}
+
+#press {
+	margin-bottom: 20px;
+}
+
+#press img {
+	border: 5px #ccc solid;
+	padding: 1px;
+}
+
+#press img:hover {
+	border: 5px rgb(111,127,122) solid;
+}
+
+footer {
+	text-align: right;
+	background: #fff;}
