--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
 /*////////////// Fonts //////////////*/
 
 /* link the web font used for the level 1 heading here */
+@font-face {
+  font-family: 'Baskerville';
+  src: fonts/Baskerville.ttc;
+}
 
 /*////////// Global Styles //////////*/
 
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -18,3 +22,55 @@ body {
 }
 
 /* Write all remaining styles here */
+
+header a{
+  color: rgb(152,173,166);
+  text-decoration: none;
+}
+
+header a:hover {
+  color: rgb(114, 126, 122);
+}
+
+h1 {
+    padding-bottom: 10px;
+    margin: 0 0 5px;
+    font-size: 5em;
+    font-weight: bold;
+    font-family: 'Baskerville', serif;
+    border-bottom: 1px solid #ccc;
+}
+
+#about h2, #press h2 {
+  color: rgb(114,126,122);
+  font-size: 2em;
+}
+
+footer .small {
+  /*font: 10px 'Times New Roman', serif;*/
+  font-size: 0.8em;
+  text-align: right;
+}
+
+#necklace img {
+  border: 5px solid rgb(156,172,166);
+}
+
+#press img {
+  border: 5px solid rgb(204,204,204);
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+#press img:hover {
+  border: 5px solid rgb(114, 126, 122);
+}
+
+#about a{
+  color: rgb(83,130,182);
+  text-decoration: none;
+}
+
+#about a:hover {
+  text-decoration: underline;
+}
