--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,15 @@
 
 /* link the web font used for the level 1 heading here */
 
+@font-face {
+	font-family: 'Baskerville';
+	src: url(../fonts/Baskerville.ttc);
+}
+		
 /*////////// Global Styles //////////*/
 
 body {
-	background: #F3EBE9;
+	background: rgb(229,219,216);
 	font-size: 100%;
 	font-family: 'Times New Roman', serif; 
 }
@@ -17,4 +22,65 @@ body {
 	padding: 0 45px 20px;
 }
 
-/* Write all remaining styles here */
+h1 {
+	padding-bottom: 10px;
+	margin: 0 0 5px;
+	font-size: 5em;
+	font-weight: normal;
+	font-family: 'Baskerville', serif;
+	border-bottom: 1px solid rgb(139,153,148);
+}
+
+h2 {
+	color: rgb(90,105,105);
+	font-size: 2em;	
+}
+
+p {
+	color: rgb(90,105,105);
+	font-size: 1em;
+	margin: 0 0 20px 0;
+}
+
+
+/*////////// Section Styles //////////*/
+
+header a {
+	color: rgb(139,157,150);
+	text-decoration: none;
+}
+
+header a:hover {
+	color: rgb(111,127,122);
+}
+
+#featured img {
+	border: 5px rgb(152,173,166) solid;
+}
+
+#featured a {
+	color: #1783bb;
+	text-decoration: none;
+}
+
+#featured a:hover {
+	text-decoration: underline;
+}
+
+#press {
+	margin-bottom: 20px;
+}
+
+#press img {
+	border: 5px #ccc solid;
+	padding: 1px;
+}
+
+#press img:hover {
+	border: 5px rgb(111,127,122) solid;
+}
+
+footer {
+	text-align: right;
+	background: #fff;
+}
