--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,45 @@
 /*////////// Global Styles //////////*/
 
 body {
-	background: #F3EBE9;
+	background-color: rgb(243,235,233);
+	width: 100%;
+	height: 100%;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
-	width: 960px;
+	width: 70%;
 	margin: 0 auto;
-	background: #fff;
+	background-color: rgb(255,255,255);
 	padding: 0 45px 20px;
 }
 
 /* Write all remaining styles here */
+
+#header-img {
+	width: 100%;
+	outline-style: solid;
+	outline-width: 4px;
+	outline-color: rgb(157,172,167);
+}
+
+h1, h2 {
+	color: rgb(157,172,167);
+}
+
+img {
+	outline-style: solid;
+	outline-width: 4px;
+	outline-color: rgb(204,204,204);
+	padding: 1px;
+	margin: 5px;
+}
+
+p {
+	color: grey;
+}
+
+img:hover {
+	outline-color:rgb(100,100,100);
+}
