--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 /*////////////// Fonts //////////////*/
-
+@font-face {
+  font-family: "baskerville";
+  src: url("../fonts/Baskerville.ttc");
+}
 /* link the web font used for the level 1 heading here */
 
 /*////////// Global Styles //////////*/
@@ -7,7 +10,7 @@
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -18,3 +21,47 @@ body {
 }
 
 /* Write all remaining styles here */
+
+h1 {
+  color: rgb(135, 160, 150);
+  font-size: 5em;
+  font-family: "baskerville";
+  border-width: 0px 0px 1px 0px;
+  border-color: rgb(135, 160, 150);
+  border-style: solid;
+  padding-bottom: 10px;
+}
+
+.section-name {
+  color: rgb(120, 145, 130);
+  font-size: 2em;
+}
+
+.wordy-text {
+  color: #000000;
+  font-size: 16px;
+}
+
+#title-wrapper {
+
+}
+
+.picture {
+  border-style: solid;
+  border-width: 5px;
+  border-color: rgb(225, 225, 225);
+}
+
+#main-picture {
+  border-color: rgb(135, 160, 150);
+}
+
+.logo {
+  float: left;
+  margin: 2px;
+}
+
+#copyright {
+  font-size: 12px;
+  text-align: right;
+}
