--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 
 /* link the web font used for the level 1 heading here */
 
+@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');
+
 /*////////// Global Styles //////////*/
 
 body {
@@ -18,3 +20,61 @@ body {
 }
 
 /* Write all remaining styles here */
+
+h1 {
+    padding-bottom: 10px;
+    margin: 0 0 5px;
+    font-size: 5em;
+    font-weight: normal;
+    font-family: 'Baskerville', serif;
+    border-bottom: 1px solid #ccc;
+}
+
+header a {
+    color: rgb(152,173,166);
+    text-decoration: none;
+}
+
+article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, 
+summary {
+    display: block;
+}
+
+#featured img {
+    border: 5px rgb(152,173,166) solid;
+}
+
+h2 {
+    color: rgb(111,127,122);
+    font-size: 2em;
+}
+
+p {
+    color: #555;
+    font-size: 1em;
+    margin: 0 0 20px 0;
+}
+
+#press {
+    margin-bottom: 20px;
+}
+
+h2 {
+    color: rgb(111,127,122);
+    font-size: 2em;
+}
+
+a {
+    background: transparent;
+}
+
+#press img {
+    border: 5px #ccc solid;
+    padding: 1px;
+}
+
+.__web-inspector-hide-shortcut__, .__web-inspector-hide-shortcut__ *, .__web-inspector-hidebefore-shortcut__::before, 
+.__web-inspector-hideafter-shortcut__::after {
+    visibility: hidden !important;
+}
+
