--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,54 @@ body {
 }
 
 /* Write all remaining styles here */
+h1 {
+	padding-bottom: 10px;
+	margin: 0 0 5px;
+	font-size: 5em;
+	font-weight: normal;
+	font-family: 'Baskerville', serif;
+	border-bottom: 1px solid #ccc;
+}
+
+h2 {
+	color: rgb(111,127,122);
+	font-size: 2em;
+}
+
+p  {
+	color: #555;
+	font-size: 1em;
+	margin: 0 0 20px 0;
+}
+
+.foot {
+	font-size: 0.8em;
+}
+
+header a {
+	color: rgb(152,173,166);
+	text-decoration: none;
+}
+
+#about img {
+	border: 5px rgb(152,173,166) solid;
+}
+
+#about a {
+	color: #1783bb;
+	text-decoration: none;
+}
+
+#press {
+	margin-bottom: 20px;
+}
+
+#press img {
+	border: 5px #ccc solid;
+	padding: 1px;
+}
+
+footer {
+	text-align: right;
+	background: #fff;
+}
