--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,7 @@
 /*////////////// Fonts //////////////*/
 
 /* link the web font used for the level 1 heading here */
-
-@import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900|Lora|Work+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Clicker+Script|Elsie+Swash+Caps:400,900|Lora|Work+Sans&display=swap');
+@import url(https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700);
 /*////////// Global Styles //////////*/
 
 body {
@@ -19,12 +17,63 @@ body {
 	padding: 0 45px 20px;
 }
 
+
 /* Write all remaining styles here */
 h1 {
-  font-family: "Clicker Script", cursive;
+  /* font-family: "Clicker Script", cursive; */
+  padding-bottom: 10px;
+  margin: 0 0 5px;
+  font-size: 5em;
+  font-weight: normal;
+  font-family: 'Baskervielle', serif;
+  border-bottom: 1px solid #ccc;
 }
-a {transition: background-color 0.5s ease;
+
+h2 {
+  color: rgb(111,127,122);
+  font-size: 2em;
 }
-a:hover {
-  background-color: green;
+
+p {
+  color: #555;
+  font-size: 1em;
+  margin: 0 0 20px 0;
 }
+
+
+.small {
+  font-size: 0.8em;
+}
+
+header a {
+  color: rgb(152,173,166);
+  text-decoration: none;
+  }
+
+header a:hover {
+  color: rgb(111,127,122);
+ }
+
+#press {
+  margin-bottom: 20px;
+}
+
+#press img {
+  border: 5px #ccc solid;
+  padding: 1px;
+  transition: background-color 0.5s ease;
+}
+
+#press img:hover {
+  border: 5px rgb(111,127,122) solid;
+  background: rgb(111,127,122);
+}
+
+footer {
+  text-align: right;
+  background: #fff;
+}
+header a:hover {
+  transition: background-color 0.5s ease;
+}
+
