--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,72 @@
 /*////////////// Fonts //////////////*/
 
-/* link the web font used for the level 1 heading here */
+@font-face {
+    font-family: 'Baskerville';
+    src: url(../fonts/Baskerville.ttc);
+}
+
 
 /*////////// Global Styles //////////*/
 
+h1 {
+    font-family: 'Baskerville', serif;
+    font-size: 80px;
+    color: rgb(152, 173, 166);
+    border-bottom-style: solid;
+    border-color: rgb(152, 173, 166);
+    padding-bottom: 10px;
+    border-width: 1px;
+    margin: 10px;
+}
+
 body {
-	background: #F3EBE9;
-	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+    background: #F3EBE9;
+    font-size: 100%;
+    font-family: 'Times New Roman', serif;
+    margin: 0px;
 }
 
 .wrapper {
-	width: 960px;
-	margin: 0 auto;
-	background: #fff;
-	padding: 0 45px 20px;
+    width: 960px;
+    margin: 0 auto;
+    background: #fff;
+    padding: 0px, 45px, 20px;
 }
 
+
 /* Write all remaining styles here */
+
+img {
+    border-width: 5px;
+    border-style: solid;
+    border-color: rgb(152, 173, 166);
+}
+
+h2 {
+    color: rgb(111, 127, 122);
+    font-size: 32px
+}
+
+h1:hover {
+    color: rgb(111, 127, 122)
+}
+
+p {
+    font-size: 16px;
+    color: #555555;
+}
+
+a {
+    color: #1783bb;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.small {
+    font-size: 13px;
+    display: block;
+    float: right;
+}
